<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
        תפריט ה-drawer. כותרות בעברית דרך strings.xml.
        אייקונים חדשים, נקיים יותר, בסטייל Material Symbols.
    -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_progress_report"
            android:icon="@drawable/ic_nav_progress"
            android:title="@string/nav_progress" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_nav_map"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_settings" />
    </group>
</menu>
